--- a/apps/index.html
+++ b/apps/index.html
@@ -17,7 +17,7 @@
      <!-- <meta property="og:type" content="ページのタイプを記載"> ←後で入力-->
      <link rel="icon" href="img/favicon.ico">
      <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-     <link href="base.css" rel="stylesheet">
+     <link href="apps_top_base.css" rel="stylesheet">
      <meta name="mobile-web-app-capable" content="yes">
      <meta name="apple-mobile-web-app-capable" content="yes">
   <link
@@ -167,6 +167,7 @@
         right: 0;
         bottom: 0;
         z-index: -1;
+        font-family: sans-serif;
       }
       .skip a {
         text-decoration: none;
