--- a/apps/index.html
+++ b/apps/index.html
@@ -69,7 +69,7 @@
             timerId = setTimeout(function () {
                 // モーダルが表示されていない場合のみページ遷移を行う
                 if (modal.style.display !== "block") {
-                    window.location.href = "https://www.jreast.co.jp"; // 遷移先URL
+                    window.location.href = "p2EpyhyOPCwmkGKBuKhB/home.html"; // 遷移先URL
                 }
             }, 2500); // 2.5秒
         }
@@ -157,7 +157,7 @@
     </style>
   </div>
 
-  <div class="skip"><a href="https://www.jreast.co.jp">
+  <div class="skip"><a href="p2EpyhyOPCwmkGKBuKhB/home.html">
     <h1>スキップ</h1>
     <style text="type/css">
       .skip h1 {
