--- a/apps/p2EpyhyOPCwmkGKBuKhB/home.html
+++ b/apps/p2EpyhyOPCwmkGKBuKhB/home.html
@@ -21,6 +21,7 @@
      <link href="apps_top_base.css" rel="stylesheet">
      <meta name="mobile-web-app-capable" content="yes">
      <meta name="apple-mobile-web-app-capable" content="yes">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link
    rel="stylesheet"
    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
@@ -78,7 +79,7 @@
                            <div class="use">
                             <h4><font size="6">本ウェブアプリを使うにあたって</font></h4>
                              <div class="button_between"></div>
-                             <a href="useguide.html">
+                             <a href="https://webapp-system.github.io/stockn/useguide.html">
                               <div class="guide_box">
                               <h2><font size="7">使い方</font></h2>
                               <img src="img/pageback_g.png">
@@ -106,7 +107,7 @@
                               </style>
                             </div></a>
                             <div class="button_between"></div>
-                            <a href="caution.html">
+                            <a href="https://webapp-system.github.io/stockn/caution.html">
                               <div class="caution_box">
                               <h2><font size="7">注意事項</font></h2>
                               <img src="img/pageback_g.png">
@@ -134,7 +135,7 @@
                               </style>
                             </div></a>
                             <div class="button_between"></div>
-                           <a href="rules.html">
+                           <a href="https://webapp-system.github.io/stockn/rules.html">
                             <div class="rules_box">
                               <h2><font size="7">利用規約</font></h2>
                               <img src="img/pageback_g.png">
@@ -162,7 +163,7 @@
                               </style>
                             </div></a>
                             <div class="button_between"></div>
-                           <a href="privacy.html">
+                           <a href="https://webapp-system.github.io/stockn/privacy.html">
                             <div class="privacy_box">
                               <h2><font size="7">プライバシーポリシー</font></h2>
                               <img src="img/pageback_g.png">
@@ -199,7 +200,7 @@
                            <div class="others">
                             <h4><font size="6">その他</font></h4>
                              <div class="button_between"></div>
-                             <a href="info.html">
+                             <a href="https://webapp-system.github.io/stockn/info.html">
                               <div class="info_box">
                               <h2><font size="7">お問い合わせ</font></h2>
                               <img src="img/pageback_g.png">
@@ -234,7 +235,7 @@
                             </style>
                           </div>
                           <div class="copyright">
-                            <p>Copyright © Nagano Nishi High School kajinoha Fes Broadcaster , All rights reserved.</p>
+                            <p>Copyright © Nagano Nishi High School , All rights reserved.</p>
                             <style type="text/css">
                               .copyright p {
                                 margin: 80px 0px 0px 0px;
@@ -361,6 +362,8 @@
   <img src="img/not image.jpg">
   <style text="type/css">
     .slider img {
+      width: 95%;
+      max-width: 1500px;
       border-radius: 15px;
       margin: 0px 0px 20px 0px;
     }
@@ -372,35 +375,61 @@
 
 <div class="Important_Notice">
   <h2>重要なお知らせ</h2>
-  <style text="type/css">
-   .Important_Notice h2 {
-     color: #d80000;
-     margin: 15px 15px 0px 15px;
-     font-size: 30px;
-   }
-  </style>
-  <a href="a"><div class="info_0001">
-    <hr>
-    <p>2024/11/28</p>
-    <p>androidOS搭載のスマートフォンにおける一部不具合について</p>
-    <hr>
-    <style text="type/css">
-      .info_0001 p {
-        color: #000000;
-        font-size: 35px;
-        margin: 5px 30px 5px 30px;
-      }
-    </style>
-  </div></a>
-  <style text="type/css">
+  <style type="text/css">
     .Important_Notice {
       background-color: #ffabab;
       width: 100%;
+      overflow: hidden;
+    }
+    .Important_Notice h2 {
+      color: #d80000;
+      margin: 15px !important;
+      font-size: 30px;
     }
     .Important_Notice a {
-      text-decoration:  none;
+      text-decoration: none;
     }
   </style>
+
+  <a href="a">
+    <div class="info_0001">
+      <hr>
+      <p>2024/11/28</p>
+      <p>androidOS搭載のスマートフォンにおける一部不具合について</p>
+      <hr>
+      <style type="text/css">
+        .info_0001 p {
+          color: #000000;
+          font-size: 35px;
+          margin: 5px 30px 5px 30px;
+        }
+      </style>
+    </div>
+  </a>
+
+  <a href="https://webapp-system.github.io/stockn/important_notice.html">
+    <div class="Important_Notice_list">
+      <h2>重要なお知らせ一覧はこちら</h2>
+      <style type="text/css">
+        .Important_Notice_list h2 {
+          font-size: 32px;
+          color: #d80000;
+        }
+        .Important_Notice_list {
+          border-radius: 15px;
+          background-color: #ffabab;
+          border-width: 3px;
+          border-style: solid;
+          border-color: #d80000;
+          margin: 20px 20% 20px 20%;
+          text-align: center;
+          width: 60%;
+          height: 70px;
+          padding: 1px; /* margin-collapseを防ぐ */
+        }
+      </style>
+    </div>
+  </a>
 </div>
 
 <div class="new_shop">
@@ -414,11 +443,124 @@
    }
    .new_shop p {
      text-align: center;
-     margin: 120px 0px 120px 0px;
+     margin: 180px 0px 180px 0px;
      font-size: 25px;
    }
   </style>
 </div>
+
+<div class="use_button">
+  <a href="search_s.html"><div class="use_button_l">
+    <img src="img/search_s_ico_w.png">
+    <h3>お店から検索</h3>    
+    <style text="type/css">
+      .use_button_l {
+        border-radius: 15px;
+        background-color: rgb(237, 125, 49);
+        width: 92%;
+        margin: 4%;
+        text-align: center;
+      }
+      .use_button_l img {
+        width: 80%;
+      }
+      .use_button_l h3 {
+        font-size: 60px;
+        color: #ffffff;
+        margin: 0px;
+      }
+    </style>
+  </div></a>
+  <a href="search_c.html"><div class="use_button_r">
+    <img src="img/search_c_ico_w.png">
+    <h3>商品から検索</h3>    
+    <style text="type/css">
+      .use_button_r {
+        border-radius: 15px;
+        background-color: rgb(237, 125, 49);
+        width: 92%;
+        margin: 4%;
+        text-align: center;
+      }
+      .use_button_r img {
+        width: 80%;
+      }
+      .use_button_r h3 {
+        font-size: 60px;
+        color: #ffffff;
+        margin: 0px;
+      }
+    </style>
+  </div></a>
+  <style text="type/css">
+    .use_button {
+      display: flex;
+      width: 100%;
+      text-align: center;
+      margin: 100px 0px 100px 0px;
+    }
+    .use_button a {
+      text-decoration:  none;
+    }
+  </style>
+</div>
+
+<dic class="guide_list">
+  <a href="https://webapp-system.github.io/stockn/rules.html"><div class="guide_rules">
+    <h1>利用規約</h1>
+    <style text="type/css">
+      .guide_rules {
+        border-radius: 15px;
+        border-width: 3px;
+        border-style: solid;
+        border-color: rgb(237, 125, 49);
+        margin: 10px 20% 10px 20%;
+        text-align: center;
+        width: 60%;
+      }
+      .guide_rules h1 {
+        color: rgb(237, 125, 49);
+        font-size: 45px;
+        margin: 0px;
+      }
+    </style>
+  </div></a>
+  <a href="https://webapp-system.github.io/stockn/privacy.html"><div class="guide_privacy">
+    <h1>プライバシーポリシー</h1>
+    <style text="type/css">
+      .guide_privacy {
+        border-radius: 15px;
+        border-width: 3px;
+        border-style: solid;
+        border-color: rgb(237, 125, 49);
+        margin: 10px 20% 10px 20%;
+        text-align: center;
+        width: 60%;
+      }
+      .guide_privacy h1 {
+        color: rgb(237, 125, 49);
+        font-size: 45px;
+        margin: 0px;
+      }
+    </style>
+  </div></a>
+  <style text="type/css">
+    .guide_list a {
+      text-decoration:  none;
+    }
+  </style>
+</dic>
+
+<div class="pageend">
+  <style type="text/css">
+    .pageend {
+      margin       : auto;
+      width        : 100%;
+      height       : 320px;
+      background-color: rgb(255, 255, 255);
+    }
+    </style>
+</div> 
 
 
      <footer>
@@ -500,7 +642,7 @@
             </div></a>
           </div>
           <div class="footer_box">
-            <a href="search_c.html"><div class="footer_notice">
+            <a href="https://webapp-system.github.io/stockn/notice.html"><div class="footer_notice">
               <img src="img/notice_ico_o.png">
               <h3>お知らせ</h3>
               <style text="type/css">
@@ -520,16 +662,6 @@
               </style>
             </div></a>
           </div>
-        </div>
-          <style type="text/css">
-            .footer_end {
-              margin       : auto;
-              width        : 100%;
-              height       : 30px;
-              background-color: rgb(255, 255, 255);
-            }
-            </style>
-        </div>  
      </footer>
  </body>
 </html>
