--- a/apps/p2EpyhyOPCwmkGKBuKhB/search_c.html
+++ b/apps/p2EpyhyOPCwmkGKBuKhB/search_c.html
@@ -356,9 +356,14 @@
 
 <div class="info_now">
     <p>只今、ご案内できる商品はございません。</p>
+    <img src="img/製作中画像.png">
     <style text="type/css">
         .info_now p {
             text-align: center;
+        }
+        .info_now img {
+          width: 74%;
+          margin: 13%;
         }
     </style>
 </div>
