--- a/apps/index.html
+++ b/apps/index.html
@@ -46,6 +46,13 @@
         <div class="modal-content">
             <span id="closeModal">&times;</span>
             <p>モーダルの内容です。</p>
+            <img src="img/製作中画像.png">
+            <style tyoe="text/css">
+              .modal-content {
+                width: 90%;
+                margin: 5%;
+              }
+            </style>
         </div>
     </div>
     <script>
