--- a/apps/p2EpyhyOPCwmkGKBuKhB/home.html
+++ b/apps/p2EpyhyOPCwmkGKBuKhB/home.html
@@ -433,19 +433,166 @@
 
 <div class="new_shop">
   <h2>新たに追加された店舗</h2>
-  <p>新たに追加された店舗はありません。</p>
   <style text="type/css">
    .new_shop h2 {
      color: #000000;
      margin: 45px 15px 0px 15px;
      font-size: 30px;
    }
-   .new_shop p {
-     text-align: center;
-     margin: 180px 0px 180px 0px;
-     font-size: 25px;
-   }
   </style>
+  <style>
+    .newshoplist{
+        overflow-x: scroll;
+        padding: 10px;
+        height: 450px;
+    }
+    .newshoplist_box{
+        /*コレ*/width: 200%;
+        display: flex;
+    }
+    .newshoplist_item{
+        height: 430px;
+        width: 600px;
+        border: 1px solid #999;
+        margin: 10px;
+        background: #ffffff;
+    }
+    </style>
+    <div class="newshoplist">
+        <div class="newshoplist_box">
+            <div class="newshoplist_item">
+              <a href="shop/39010001.html">
+                  <div class="shopimg">
+                    <img src="img/39010001_img.JPG">
+                  </div>
+                  <div class="shopinfo">
+                    <p>長野県 長野市</p>
+                    <h2>長野西高校　購買</h2>
+                  </div>
+              </a>
+              <style>
+                .shopimg img {
+                  width: 100%;
+                  margin: 0px;
+                  text-align: left;
+                }
+                .shopinfo p {
+                  margin: 2px;
+                  font-size: 12px;
+                  color: #000;
+                  text-align: left;
+                }
+                .shopinfo h2 {
+                  margin: 2px;
+                  font-size: 20px;
+                  color: #000;
+                }
+                .newshoplist_item a {
+                  text-decoration:  none;
+                }
+              </style>
+            </div>
+            <div class="newshoplist_item">
+              <a href="新店舗リンク">
+                  <div class="shopimg">
+                    <img src="img/not image.jpg">
+                  </div>
+                  <div class="shopinfo">
+                    <p>　</p>
+                    <h2>準備中</h2>
+                  </div>
+              </a>
+              <style>
+                .shopimg img {
+                  width: 100%;
+                  margin: 0px;
+                  text-align: left;
+                }
+                .shopinfo p {
+                  margin: 2px;
+                  font-size: 12px;
+                  color: #000;
+                  text-align: left;
+                }
+                .shopinfo h2 {
+                  margin: 2px;
+                  font-size: 20px;
+                  color: #000;
+                }
+                .newshoplist_item a {
+                  text-decoration:  none;
+                }
+              </style>
+            </div>
+            <div class="newshoplist_item">
+              <a href="新店舗リンク">
+                  <div class="shopimg">
+                    <img src="img/not image.jpg">
+                  </div>
+                  <div class="shopinfo">
+                    <p> </p>
+                    <h2>準備中</h2>
+                  </div>
+              </a>
+              <style>
+                .shopimg img {
+                  width: 100%;
+                  margin: 0px;
+                  text-align: left;
+                }
+                .shopinfo p {
+                  margin: 2px;
+                  font-size: 12px;
+                  color: #000;
+                  text-align: left;
+                }
+                .shopinfo h2 {
+                  margin: 2px;
+                  font-size: 20px;
+                  color: #000;
+                }
+                .newshoplist_item a {
+                  text-decoration:  none;
+                }
+              </style>
+            </div>
+            <div class="newshoplist_item">
+              <a href="新店舗リンク">
+                  <div class="shopimg">
+                    <img src="img/not image.jpg">
+                  </div>
+                  <div class="shopinfo">
+                    <p> </p>
+                    <h2>準備中</h2>
+                  </div>
+              </a>
+              <style>
+                .shopimg img {
+                  width: 100%;
+                  margin: 0px;
+                  text-align: left;
+                }
+                .shopinfo p {
+                  margin: 2px;
+                  font-size: 12px;
+                  color: #000;
+                  text-align: left;
+                }
+                .shopinfo h2 {
+                  margin: 2px;
+                  font-size: 20px;
+                  color: #000;
+                }
+                .newshoplist_item a {
+                  text-decoration:  none;
+                }
+              </style>
+            </div>
+        </div>
+    </div>
+  </div>
+ </div>
+
   
 
 <div class="use_button">
