--- a/apps/index.html
+++ b/apps/index.html
@@ -49,7 +49,7 @@
             <img src="img/製作中画像.png">
             <style tyoe="text/css">
               .modal-content {
-                width: 90%;
+                width: 40%;
                 margin: 5%;
               }
             </style>
@@ -135,9 +135,9 @@
           top: 50%; /* 縦方向の中央に配置 */
           left: 50%; /* 横方向の中央に配置 */
           transform: translate(-50%, -50%); /* 完全に中央に配置するための補正 */
-          padding: 20px; /* モーダル内の余白を設定 */
-          width: 300px; /* モーダルの幅 */
-          height: 60px; /* モーダルの高さ */
+          padding: 2%; /* モーダル内の余白を設定 */
+          width: 86%; /* モーダルの幅 */
+          height: 80%; /* モーダルの高さ */
           background-color: #fefefe; /* モーダルの背景色を白に設定 */
           border: 1px solid #888; /* 境界線の色を薄いグレーに設定 */
           border-radius: 10px; /* モーダルの角を丸くするための半径 */
