--- a/apps/p2EpyhyOPCwmkGKBuKhB/shop/39010001.html
+++ b/apps/p2EpyhyOPCwmkGKBuKhB/shop/39010001.html
@@ -445,7 +445,7 @@
 </div> 
 
 <dic class="guide">
-    <a href="search_prefecture.html"><div class="guide_button">
+    <a href="39010001/list.html"><div class="guide_button">
       <h1>商品の在庫状況を見る</h1>
       <style text="type/css">
         .guide_button {
