--- a/apps/p2EpyhyOPCwmkGKBuKhB/shop/39010001/list_bread.html
+++ b/apps/p2EpyhyOPCwmkGKBuKhB/shop/39010001/list_bread.html
@@ -29,7 +29,7 @@
     <header>
         <div class="header_h">
             <div class="pageback">
-                <a href="https://webapp-system.github.io/stockn/apps/p2EpyhyOPCwmkGKBuKhB/shop/list.html">
+                <a href="list.html">
                     <img src="img/pageback_l.png">
                 </a>
             </div>
@@ -345,7 +345,7 @@
            </style>
         </div>
     </header>
-    
+
     <div class="pagetop" id="makeImg">
         <style type="text/css">
           .pagetop {
