--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             method: 'POST',
             body: JSON.stringify({
                 cell: 'A1',
-                value: '新しい値'
+                value: '10000'
             })
         })
             .then(response => response.text())
