--- a/apps/p2EpyhyOPCwmkGKBuKhB/search_prefecture.html
+++ b/apps/p2EpyhyOPCwmkGKBuKhB/search_prefecture.html
@@ -31,7 +31,7 @@
       <div class="header_h_list">
         <center>
           <h1 style="text-align:center">
-            <font size="8">お店から検索</font>
+            <font size="8">都道府県ごとに見る</font>
           </h1>
         </center>
         <style type="text/css">
@@ -397,237 +397,24 @@
     </style>
   </div>
 
-  <!--
- <dic class="guide_list">
-  <a href="search_prefecture.html"><div class="guide_rules">
-    <h1>都道府県ごとに見る</h1>
-    <style text="type/css">
-      .guide_rules {
-        border-radius: 15px;
-        border-width: 3px;
-        border-style: solid;
-        border-color: rgb(237, 125, 49);
-        margin: 10px 20% 10px 20%;
-        text-align: center;
-        width: 60%;
-      }
-      .guide_rules h1 {
-        color: rgb(237, 125, 49);
-        font-size: 45px;
-        margin: 0px;
-      }
-    </style>
-  <style text="type/css">
-    .guide_list a {
-      text-decoration:  none;
-    }
-  </style>
-</div>
--->
-
-  <div class="new_shop">
-    <h2>新たに追加された店舗</h2>
-    <style text="type/css">
-      .new_shop h2 {
-        color: #000000;
-        margin: 45px 15px 0px 15px;
-        font-size: 30px;
-      }
-    </style>
-    <style>
-      .newshoplist {
-        overflow-x: scroll;
-        padding: 10px;
-        height: 450px;
-      }
-
-      .newshoplist_box {
-        /*コレ*/
-        width: 200%;
-        display: flex;
-      }
-
-      .newshoplist_item {
-        height: 430px;
-        width: 600px;
-        border: 1px solid #999;
-        margin: 10px;
-        background: #ffffff;
-      }
-    </style>
-    <div class="newshoplist">
-      <div class="newshoplist_box">
-        <div class="newshoplist_item">
-          <a href="shop/39010001.html">
-            <div class="shopimg">
-              <img src="img/39010001_img.JPG">
-            </div>
-            <div class="shopinfo">
-              <p>長野県 長野市</p>
-              <h2>長野西高校　購買</h2>
-            </div>
-          </a>
-          <style>
-            .shopimg img {
-              width: 100%;
-              margin: 0px;
-              text-align: left;
-            }
-
-            .shopinfo p {
-              margin: 2px;
-              font-size: 12px;
-              color: #000;
-              text-align: left;
-            }
-
-            .shopinfo h2 {
-              margin: 2px;
-              font-size: 20px;
-              color: #000;
-            }
-
-            .newshoplist_item a {
-              text-decoration: none;
-            }
-          </style>
-        </div>
-        <div class="newshoplist_item">
-          <a href="新店舗リンク">
-            <div class="shopimg">
-              <img src="img/not image.jpg">
-            </div>
-            <div class="shopinfo">
-              <p>　</p>
-              <h2>準備中</h2>
-            </div>
-          </a>
-          <style>
-            .shopimg img {
-              width: 100%;
-              margin: 0px;
-              text-align: left;
-            }
-
-            .shopinfo p {
-              margin: 2px;
-              font-size: 12px;
-              color: #000;
-              text-align: left;
-            }
-
-            .shopinfo h2 {
-              margin: 2px;
-              font-size: 20px;
-              color: #000;
-            }
-
-            .newshoplist_item a {
-              text-decoration: none;
-            }
-          </style>
-        </div>
-        <div class="newshoplist_item">
-          <a href="新店舗リンク">
-            <div class="shopimg">
-              <img src="img/not image.jpg">
-            </div>
-            <div class="shopinfo">
-              <p> </p>
-              <h2>準備中</h2>
-            </div>
-          </a>
-          <style>
-            .shopimg img {
-              width: 100%;
-              margin: 0px;
-              text-align: left;
-            }
-
-            .shopinfo p {
-              margin: 2px;
-              font-size: 12px;
-              color: #000;
-              text-align: left;
-            }
-
-            .shopinfo h2 {
-              margin: 2px;
-              font-size: 20px;
-              color: #000;
-            }
-
-            .newshoplist_item a {
-              text-decoration: none;
-            }
-          </style>
-        </div>
-        <div class="newshoplist_item">
-          <a href="新店舗リンク">
-            <div class="shopimg">
-              <img src="img/not image.jpg">
-            </div>
-            <div class="shopinfo">
-              <p> </p>
-              <h2>準備中</h2>
-            </div>
-          </a>
-          <style>
-            .shopimg img {
-              width: 100%;
-              margin: 0px;
-              text-align: left;
-            }
-
-            .shopinfo p {
-              margin: 2px;
-              font-size: 12px;
-              color: #000;
-              text-align: left;
-            }
-
-            .shopinfo h2 {
-              margin: 2px;
-              font-size: 20px;
-              color: #000;
-            }
-
-            .newshoplist_item a {
-              text-decoration: none;
-            }
-          </style>
-        </div>
+  <div class="prefecture_box">
+    <a href="search_Hokkaido.html">
+      <div class="prefecture_name">
+        <h1>北海道</h1>
       </div>
-    </div>
-  </div>
-  </div>
+      <img src="img/pageback_g.png">
+      <style>
+        .pefecture_box {
+          display: flex;
+        }
 
-  <div class="shop_info">
-    <h2>登録された店舗一覧</h2>
-    <style text="type/css">
-      .shop_info h2 {
-        color: #000000;
-        margin: 45px 15px 0px 15px;
-        font-size: 30px;
-      }
-    </style>
-  </div>
-
-  <div class="list-container">
-    <div class="Llist">
-      <a href="shop/39010001.html">
-        <div class="listblock" id="makeImg">
-          <img src="shop/img/39010001_img.JPG">
-          <div class="listtext">
-            <h2>長野県</h2>
-            <h1>長野西高校　購買</h1>
-            <div class="listblock_last" id="makeImg"></div>
-          </div>
-        </div>
-      </a>
-    </div>
-    <div class="Rlist">
-    </div>
+        .pefecture_box img {
+          height: 50px;
+          float: right;
+          margin: 50px 20px 50px 0px;
+        }
+      </style>
+    </a>
   </div>
 
   <div class="pageend">
